<resources>
    <string name="default_notification_channel_id" translatable="false">channel_not_dec</string>
    <string name="app_name">Doctor en casa</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="i_am_affiliated">Soy Afiliado</string>
    <string name="i_am_not_affiliate">No soy Afiliado</string>
    <string name="choose_provider">Elegí tu empresa</string>
    <string name="affiliate_number">Numero de socio</string>
    <string name="document_number">Numero de documento</string>
    <string name="search_affiliate">Buscá tus datos</string>
    <string name="create_account">Creá tu cuenta</string>
    <string name="create">CREAR</string>
    <string name="continue_to_next_screen">Continuar</string>
    <string name="nav_bar_clinic_history">Historia clinica</string>
    <string name="nav_bar_news">Noticias</string>
    <string name="nav_bar_plan">Configuración</string>
    <string name="nav_bar_videocall">Videollamada</string>
    <string name="username">Mail</string>
    <string name="email">Mail</string>
    <string name="password">Contraseña</string>
    <string name="password_repeat">Volvé a ingresar la contraseña</string>
    <string name="login">INGRESAR</string>
    <string name="send">ENVIAR</string>
    <string name="ok">ACEPTAR</string>
    <string name="change">CAMBIAR</string>
    <string name="skip">AHORA NO</string>
    <string name="not_account_yet">¿Todavía no tenés cuenta? Registrate aqui.</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="recover_password">Restablecer contraseña</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="can_be_empty">Este campo es obligatorio</string>
    <string name="error_invalid_password_format">Debe tener al menos 6 caracteres.</string>
    <string name="error_invalid_username_format">Debe tener al menos 4 caracteres.</string>
    <string name="error_invalid_email_format">El email debe tener un formato válido.</string>
    <string name="credential_error">El nombre de usuario o la contraseña son incorrectos</string>
    <string name="create_user_title">Hola %1$s! Ingresá tus datos para crear la cuenta.</string>
    <string name="no_affiliate_number">Ingrese un número de afiliado</string>
    <string name="wrong_affiliate_number">El número de afiliado no existe</string>
    <string name="error_getting_affiliate_list">El número de afiliado no corresponde a ningun afiliado o grupo familiar</string>
    <string name="non_matching_passwords">Las contraseñas ingresadas no coinciden</string>
    <string name="enter_email">Ingresá el mail de tu cuenta</string>
    <string name="email_sent">Se ha enviado un mail con la nueva contraseña.</string>
    <string name="current_password">Contraseña actual</string>
    <string name="empty_filters">No hay filtros disponibles ya que no tenés historias clínicas.</string>
    <string name="new_password">Contraseña nueva</string>
    <string name="videocall_service_disabled">No tenés contratado el servicio de videollamadas. Comunicate con nuestro servicio de atención al cliente para contratar este servicio.</string>
    <string name="repeat_new_password">Volvé a ingresar la contraseña nueva</string>
    <string name="error_cancelling">Hubo un error cancelando el turno, intentelo nuevamente más tarde.</string>
    <string name="cancel_call_confirm">¿Estás seguro de cancelar el turno?</string>
    <string name="updated_password">La contraseña fue actualizada correctamente. Usá la contraseña seleccionada la próxima vez que ingreses a la aplicación.</string>
    <string name="permissions_need_acepted">Es necesario que aceptes todos los permisos para poder realizar la videollamada</string>
    <string name="videocall_not_available">La consulta ya no está disponible, por favor volvé a sacar turno para ser atendido.</string>
    <string name="close_session_confirm">¿Estás seguro que querés cerrar la sesión?</string>
    <string name="no">no</string>
    <string name="yes">si</string>
    <string name="permissions_denied">Si no aceptas los permisos que pide la app, no vas a poder realizar la videollamada.\nIntentá realizar la llamada nuevamente y acepta los permisos solicitados.</string>
    <string name="permissions_never_ask"><![CDATA[Para poder realizar la llamada, ingresa a la configuración de tu dispositivo -> Aplicaciones -> Doctor en Casa -> Permisos y acepta todos los permisos.]]></string>
    <string name="error_starting_call">Hubo un error iniciando la llamada, por favor verificá tu conexión a internet e intentalo nuevamente.</string>
    <string name="starting_call">INICIANDO VIDEOLLAMADA...</string>
    <string name="error_hangup">Hubo un error finalizando la llamada.</string>
    <string name="cancel">CANCELAR</string>
    <string name="cancel_create_account">Cancelar</string>
    <string name="retry">REINTENTAR</string>
    <string name="add_comments">Envíanos tus comentarios para seguir mejorando</string>
    <string name="write_comments">Escribir comentario aqui</string>
    <string name="rate_videocall">Puntua la calidad de la llamada</string>
    <string name="last_call_detail">La ultima consulta que realizaste fue el dia %1$s, te atendió %2$s y duró %3$s.</string>
    <string name="calls_quantity">Realizaste %1$d consultas en los últimos 30 días</string>
    <string name="queue_delay">Existe una demora de %1$s para ser atendido</string>
    <string name="init_call">SACAR TURNO</string>
    <string name="cancel_call">CANCELAR TURNO</string>
    <string name="in_queue_no_delay">¡Hay médicos disponibles para atenderte en este momento!</string>
    <string name="in_queue_no_doctor">¡Hay una espera estimada de 10 minutos!</string>
    <string name="in_queue_delay"><![CDATA[La demora estimada para que el doctor te atienda es de <b>%1$s.</b>]]></string>
    <string name="last_consult">ÚLTIMA CONSULTA</string>
    <string name="new_consult">Sacá un turno para ser atendido por uno de nuestro doctores.</string>
    <string name="already_in_queue"><![CDATA[<b>¡Ya te encuentras en lista de espera!</b>\n Te llamaremos cuando haya un doctor disponible]]></string>
    <string name="there_is_a_doctor_for_you"><![CDATA[¡Ya hay un médico disponible para vos!\n¡Te va a estar llamando en cualquier momento!]]></string>
    <string name="there_is_a_call_in_progress">¡Ya tenés una consulta en progreso!</string>
    <string name="clinic_history">VER MI HISTORIA CLINICA</string>
    <string name="use_your_device_meanwhile">Cuando sea tu turno, te vamos a avisar. Mientras tanto, podes seguir usando tu celular.</string>
    <string name="available_doctor">Hay doctores disponibles para atenderte ahora!</string>
    <string name="history_empty">Luego de la primer consulta, tendrás tu historia clínica.</string>
    <string name="history_error"><![CDATA[No se pudo cargar la información.\nPor favor, intentá nuevamente.]]></string>
    <string name="remember_to_accept">Tenés 30 segundos para responder a esta llamada, sino perderás tu lugar y deberás volver a sacar un nuevo turno.</string>
    <string name="remaining_time_to_answer"><![CDATA[Si no atiendes la llamada en los próximos <b>%1$s</b>, perderás el turno y deberás volver a sacar un nuevo turno.]]></string>
    <string name="remaining_time_to_answer_one"><![CDATA[Si no atiendes la llamada en menos de <b>un minuto</b>, perderás el turno y deberás volver a sacar un nuevo turno.]]></string>
    <string name="no_response">No contestaste la llamada a tiempo. En breve vas a poder a sacar un turno nuevamente para ser atendido.</string>
    <string name="call_rejectec">Rechazaste la llamada. En breve vas a poder a sacar un turno nuevamente para ser atendido.</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="rate_app">Calificanos</string>
    <string name="remember_later">Recordar más tarde</string>
    <string name="rate_now">Calificar ahora</string>
    <string name="no_rate">No, gracias</string>
    <string name="rate_message">Si esta aplicación te gustó, no te olvides de calificarnos. ¡Muchas gracias! </string>
    <string name="terms">Términos y condiciones</string>
    <string name="terms_accept"><![CDATA[Acepto los <u>términos y condiciones</u>]]></string>
    <string name="filter">Aceptar</string>
    <string name="select_affiliate_list">Selecciona un afiliado</string>
</resources>