<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <item
            android:id="@+id/nav_videocall"
            android:enabled="true"
            android:checked="true"
            android:icon="@drawable/ic_videocam"
            android:title="@string/nav_bar_videocall" />
        <item
            android:id="@+id/nav_historic"
            android:enabled="true"
            android:icon="@drawable/ic_clinical_history"
            android:title="@string/nav_bar_clinic_history" />
        <item
            android:id="@+id/nav_news"
            android:enabled="true"
            android:icon="@drawable/news"
            android:title="@string/nav_bar_news" />
        <item
            android:id="@+id/nav_plan"
            android:enabled="true"
            android:icon="@drawable/ic_configuration"
            android:title="@string/nav_bar_plan" />

</menu>