<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/view_progress_transparent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/fragment_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="100dp"
        android:padding="10dp"
        android:text="@string/app_name" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/fragment_login_username_layout"
        android:layout_below="@+id/fragment_login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_centerInParent="true"
        android:gravity="center"
        app:hintTextAppearance="@style/AppTheme.FloatingLabel"
        app:errorTextAppearance="@style/AppTheme.EditTextError">


        <android.support.design.widget.TextInputEditText
            android:id="@+id/fragment_login_username"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/username"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:theme="@style/FormEditText"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/fragment_login_password_layout"
        android:layout_below="@+id/fragment_login_username_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        app:hintTextAppearance="@style/AppTheme.FloatingLabel"
        app:errorTextAppearance="@style/AppTheme.EditTextError">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/fragment_login_password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:theme="@style/FormEditText"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/fragment_login_button"
        android:layout_below="@+id/fragment_login_password_layout"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:text="@string/login" />

    <TextView
        android:id="@+id/fragment_login_forgot_password"
        android:layout_below="@+id/fragment_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/forgot_password" />


    <TextView
        android:id="@+id/fragment_login_create_account"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/not_account_yet" />

</RelativeLayout>