<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <com.ashokslsk.androidabcd.squarerating.SquareRatingView
        android:id="@+id/dialog_rank_ranking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_alignParentTop="true"
        app:setNumSquare="5"
        app:setRating="0"
        app:setSelectedResource="@drawable/ic_star"
        app:setStepSize="1"
        app:setUnSelectedResource="@drawable/ic_star_border" />

    <EditText
        android:id="@+id/dialog_rank_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/dialog_rank_ranking"
        android:textSize="16sp"
        android:hint="@string/add_comments" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_below="@id/dialog_rank_comment"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/negative_button"
            style="@style/FormButton"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/skip" />

        <Button
            android:id="@+id/positive_button"
            style="@style/FormButton"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/send" />

    </LinearLayout>
</RelativeLayout>