<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.unidadcoronaria.doctorencasa.view.CustomTextView
        android:id="@+id/dialog_affiliate_list_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="16dp"
        app:visual_font_name="regular"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:textSize="18sp"
        android:textColor="@color/greyDark"
        android:text="@string/select_affiliate_list" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/dialog_affiliate_list_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/negative_button"
            android:background="@drawable/selector_transparent_button"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textSize="18sp"
            android:textColor="@color/greyDark"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/positive_button"
            android:background="@drawable/selector_transparent_button"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textSize="18sp"
            android:textColor="@color/red"
            android:text="@string/filter" />

    </LinearLayout>


</LinearLayout>