<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <include
            layout="@layout/view_progress"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/fragment_end_call_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="40dp"
            android:text="@string/rate_videocall" />

        <com.ashokslsk.androidabcd.squarerating.SquareRatingView
            android:id="@+id/fragment_end_call_ranking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fragment_end_call_title"
            android:layout_marginTop="50dp"
            app:setNumSquare="5"
            app:setRating="0"
            app:setSelectedResource="@drawable/ic_star"
            app:setStepSize="1"
            app:setUnSelectedResource="@drawable/ic_star_border" />

        <EditText
            android:id="@+id/fragment_end_call_comment"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@+id/square"
            android:layout_marginTop="20dp"
            android:hint="@string/add_comments" />


        <Button
            android:id="@+id/fragment_end_call_button"
            style="@style/FormButton"
            android:layout_below="@+id/fragment_end_call_comment"
            android:layout_marginTop="30dp"
            android:text="@string/send" />


    </RelativeLayout>

</ScrollView>